force-app/main/default/objects/SVMXC__Function_Definition__c/SVMXC__Function_Definition__c.object-meta.xml
<CustomObject>
    <description>This is to define Functions that are available to be used in SFM Output Doc Templates.</description>
    <label>Function Definition</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Function Definitions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>