force-app/main/default/objects/SVMXC__Function_Definition__c/fields/SVMXC__IsStandard__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStandard</label>
    <type>Checkbox</type>
</CustomField>