force-app/main/default/objects/SVMXC__Function_Definition__c/fields/SVMXC__Macro_Id__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Macro_Id__c</fullName>
    <formula>TEXT(SVMXC__Type__c ) + &apos;_&apos; +  SVMXC__Macro_Name__c  + &apos;_&apos; + &apos;C&apos;</formula>
    <label>Macro Id</label>
    <type>Text</type>
</CustomField>