force-app/main/default/objects/SVMXC__Function_Definition__c/fields/SVMXC__Syntax__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Syntax__c</fullName>
    <label>Syntax</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>